css/styles.css
:root {
  /* ///////////// */
  /*  Colors used  */
  /* ///////////// */
  --body-color: #f8fafa;
  --body-color-darken: #f5f5f5;
  --primary-color: #000080;
  --primary-color-lighten: #0000CC;
  --grey: #9c9c9c;
  --shadow: 1px 3px 5px 0px rgba(0,0,0,0.3);
  --shadow-darken : 3px 5px 7px 0px rgba(0,0,0,0.3);

  /* //////////////// */
  /*  Text and Fonts  */
  /* //////////////// */
  --text-size: 12pt;
  --secondary-text-size: 9pt;
  --h1-size: 2.2em;
  --h2-size: 1.1em;
  --weight-bold: 700;
  --primary-font: 'Nunito', sans-serif;
  --secondary-font: 'Lato', sans-serif;

  --alt-font: Arial, Helvetica, sans-serif;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  background: var(--body-color);
  font-family: var(--primary-font);
  font-size: var(--text-size);
  line-height: 1.6;
}

h1 {
  font-size: var(--h1-size);
  font-weight: var(--weight-bold);
  font-family: var(--secondary-font);
}

h2 {
  font-size: var(--h2-size);
  font-weight: var(--weight-bold);
  font-family: var(--secondary-font);
}

a {
  color: var(--primary-color-lighten);
  cursor: pointer;
}

p {
  font-family: var(--primary-font);
  margin: 0 auto;
}

a:hover, a:focus{
  text-decoration: none;
  opacity: 0.8;
  transition: 0.1s opacity;
}

.button,
button {
  border-radius: 3px;
  padding: 8px 16px;
  margin: 4px auto;
  border: none;
  display: inline-block;
  background-color: var(--primary-color);
  color: var(--body-color);
  text-decoration: none;
  text-align: center;
  font-family: var(--alt-font);
  font-weight: 100;
  font-size: 14px;
  line-height: 1;
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
}

.button:active,
button:active{
  border-bottom: none;
  position: relative;
  top: 2px;
}

.button:hover,
.button:focus,
button:hover,
button:focus {
  cursor: pointer;
  opacity: 0.89;
  box-shadow: var(--shadow);
}

input{
  line-height: 1.4;
  padding: 3px;
  border: var(--grey) solid .7px;
}

::-webkit-input-placeholder { /* Edge */
  font-size: 10px;
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
  font-size: 10px;
}

::placeholder {
  font-size: 10px;
}
.img[alt]{
  display: inline-block;
  color: var(--grey);
  font-weight: 100;
  font-size: var(--secondary-text-size);
  font-family: var(--alt-font);
}

.about-container__header ,
.work-container__header,
.contact-container__header{
  text-align: center;
  margin: 80px 0 60px 0
}

.legend{
  font-size: 10px;
  color: var(--grey);
}

/* //////// */
/*  NAVBAR  */
/* //////// */
.page-header {
  display: flex;
  width: 100%;
  padding: 15px 30px;
  background-color: var(--body-color-darken);
}

.navigation__logo {
  height: 60px;
}

.my-logo {
  line-height: 13px;
  text-align: center;
}

.logo-name {
  font-family: var(--primary-font);
  font-size: 12pt;
  font-weight: var(--weight-bold);
  color: black;
  position: absolute;
  top: 50px;
  left: 105px;
}

.logo-caption{
  font-family: var(--primary-font);
  font-size: 9pt;
  letter-spacing: 2px;
  color: VAR(--primary-color);
  text-decoration: underline;
  position: absolute;
  top: 70px;
  left: 133px;
}

.page-header__item {
  flex: 0 1 200px;
  list-style-type: none;
  color: var(--primary-color-lighten);
}

.page-header__item:last-child {
  flex-grow: 1;
  text-align: right;
  display: flex;
  justify-content: flex-end;
}

.navigation-list li {
  display: inline-block;
  margin: 0 15px;
}

.navigation-list__item--active {
  text-decoration: none;
  color: var(--primary-color);
}

.dropbtn {
  display: none;
  font-size: 14px;
  padding: 7px 20px;
  margin: 27px 32px 3px 0;
}

.dropdown-menu-list {
  display: none;
  border-radius: 3px;
  position: absolute;
  right: 10px;
  background-color: var(--body-color);
  max-width: 160px;
  box-shadow: var(--shadow);
  padding: 6px 12px;
}

.dropdown-menu:hover
.dropdown-menu-list {
  display: block;
}

.dropdown-menu-list a {
  float: none;
  font-size: 16px;
  color: var(--primary-color-lighten);
  padding: 10px 20px;
  text-decoration: none;
  display: block;
  text-align: left;
}

/* //////////////////// */
/*  INDEX page content  */
/* //////////////////// */
.profile-container {
  max-width: 900px;
  margin: 6% auto;
  box-sizing: border-box;
}

.profile__portrait {
  float: left;
  width: 370px;
  margin: 60px 50px;
  border-radius: 35px;
  box-shadow: var(--shadow-darken);
}

.profile-description{
  padding-top: 60px;
  text-align: center
}

.blueBackground-text{
  background-color: var(--primary-color);
  color: var(--body-color);
  border-radius: 10%;

}

/* //////////////////// */
/*  ABOUT page content  */
/* //////////////////// */
.about-container{
  max-width: 900px;
  display: grid;
  margin: 0 auto;
  padding: 0 40px;
}

.about-container__item{
  list-style-type: circle;
  margin: 5px auto;
}

.tech-icons{
  margin: 40px 0 80px 0;
  border-radius: 30px;
}

.tech-icon__img {
  width: 75px;
  height: 75px;
  margin: 8px 0;
  border-radius: 50%;
  backface-visibility: hidden;
  filter: drop-shadow(0 0 1rem grey);
}

.tech-icon__item {
  position: relative;
  display: inline-block;
}

.tooltip-text {
  visibility: hidden;
  color: var(--primary-color);
  border-radius: 6px;
  padding: 5px 10px;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
  font-size: 14px;
  font-weight: 700;
}

.tech-icon__item:hover
.tooltip-text {
  visibility: visible;
  opacity: 1;
  transition: .4s ease .3s;
}

.tech-icon__item:hover img {
  transition: .3s ease .3s ;
  transform: scale(1.19);
  opacity: 0.1;
}

.cvAction{
  margin: 3% 0 0 10%;
}

.cvDownload{
  margin: auto auto;
}

.cvView{
  margin: 0 10%;
  width: 80%;
  height: 2100px;
}

svg{
  box-shadow: var(--shadow);
  border-radius: 30px;
}

.SVGlegend{
  margin: 2px 3%;
  padding-top: 1px;
  color: var(--grey);
  text-decoration: none;
  text-align: left;
  font-size: 9px;
}

/* /////////////////// */
/*  WORK page content  */
/* /////////////////// */
.work-container{
  margin: 0 40px;
}

.project-list {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 40px 30px;
  font-size: 0.9rem;
  margin: 0 5%;
}

/* Fallback Grid */
.project-list__item {
  max-width: 900px;
  padding: 0 40px;
  display: inline-block;
  width: 33%;
}

.project-list__item {
  display: inline-block;
  width: 33%;
  box-shadow: var(--shadow-darken);
  padding: 20px 20px;
  border-radius: 3%;
  width: auto;
  text-align: center;
  background-color: var(--body-color-darken);
}


.project-list__img{
  max-width: 100%;
  margin: auto;
  height: auto;
}

.project-list p {
  text-align: left;
}

.project-list__item:last-child {
  grid-column: 2 / 4;
  grid-row: 4 / 5;
  font-size: 1.1em;
  height: 100%;
}

.project-list__item:last-child a{
  margin: 0 auto;
}

/* ////////////////////// */
/*  CONTACT page content  */
/* ////////////////////// */
.contact-container{
  max-width: 900px;
  margin: 40px auto;
  text-align: center;
}



#contact-form{
  margin-top: 80px;
}

#contact-email,
#contact-tel{
  margin-bottom: 8px;
}

#contact-mes{
  width: 300px;
  height: 200px;
  padding: 10px 4px;
  min-height: 60px;
  border: var(--grey)  solid .7px;
}

.messageSent{
  text-align: center;
  padding: 10px;
  background: #79c879;
  color: #fff;
  margin-bottom: 10px;
  display: none;
  width: fit-content;
  margin: 0 auto;
}

.error-message{
  color: red;
  font-size: 12px;
  position: absolute;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

#contact-tel:focus,
#contact-email:focus,
#contact-mes:focus {
  border: solid var(--primary-color-lighten) .7px;
  outline: none !important;
}



/* //////// */
/*  footer  */
/* //////// */
footer {
  clear: both;
  text-align: center;
  width: 100%;
  padding-top: 100px;
  padding-bottom: 20px;
}

.social-img{
  height: 55px;
  margin: 3px;
}

/* /////////////// */
/*  Media Queries  */
/* /////////////// */
/* TABLET */
@media all and (max-width: 1020px) {
  body{
    font-size: 10pt;
  }

  .hideFromMobile{
    display: none;
  }

  .profile,
  .contact,
  .about,
  .work {
    margin-top: 25px;
    padding: 0 10px;
  }

  .about-container__header,
  .work-container__header,
  .contact-container__header{
    margin: 40px 0;
  }

  .profile__portrait{
    float: none;
    display: table;
    margin: 20px auto;
  }

  .profile-description{
    padding-top: 0;
    text-align: center;
  }

  .about-container{
    margin: 0 100px;
  }

  .tech-icons{
    margin: 40px 0;
  }

  .tech-icon__img {
    width: 55px;
    height: 55px;
    margin: 4px;
  }

  .tech-icon__item:hover
  .tooltip-text {
    display: none;
  }

  .tech-icon__item:hover img,
  .tech-icon__item:active img {
    opacity: 1;
    transform: none;
  }

  svg{
    width: 70%;
    margin: 0 15%;
    font-size: 6;
  }

  .SVGlegend{
    margin: 2px auto;
    font-size: 7px;
  }

  .project-list {
    grid-template-columns: 1fr 1fr;
    grid-gap: 15px;
    margin: 0 10%;
  }

  .project-list__item:last-child {
    grid-column: 1 / 3;
    grid-row: auto / auto;
  }

}

/* MOBILE */
@media all and (max-width: 720px) {
  ul {
    padding-inline-start: 0;
    width: 0;
  }

 .page-header{
    padding: 10px 15px;
    height: 90px;
    width: 100vw
  }

  .my-logo{
    line-height: 8px;
  }

  .logo-name{
    font-size: 9pt;
    line-height: 15px;
  }

  .logo-caption {
    font-size: 5pt;
  }

  .navigation-list__item {
    display: none;
  }

  .dropbtn {
    display: block;
  }

  .profile__portrait{
    width: 70vw;
  }

  .profile-description{
    width: 200px;
    margin: 0 auto;
  }

  .tech-icon__img {
    width: 50px;
    height: 50px;
    margin: 4px;
  }

  .SVGlegend{
    font-size: 6px;
  }
  
  .work-container{
    margin: 0 20px;
  }

  .project-list {
    grid-template-columns: 1fr;
    grid-gap: 20px;
  }

  .project-list__item:last-child {
    grid-column: auto / auto;
    grid-row: auto / auto;
  }

  .contact-container{
    margin: 30px 10%;
  }

  #contact-form{
    margin-top: 40px;
  }

  #contact-mes{
    width: 70vw;
  }

  footer {
    padding: 60px 0 7px 0
  }

  .social-img{
    height: 40px;
    margin-bottom: 10px;
  }
}

